# ndk-audioplayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wind/ndk/audio/player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_wind_ndk_audio_player_AudioTrackPlayer.cpp  com_wind_ndk_audio_player_AudioTrackPlayer.h
app/src/main/cpp/audio_decoder/: audio_decoder.cpp  audio_decoder.h  audio_frame.h  audio_metadata.h
app/src/main/cpp/audio_track/: audio_track_caller.cpp  audio_track_caller.h  audio_track_player.cpp  audio_track_player.h
app/src/main/cpp/libs/blocking_queue/: blocking_queue.h
app/src/main/cpp/libs/lock/: CMakeLists.txt  condition.cpp  condition.h  lock.cpp  lock.h
app/src/main/cpp/read_strategy/: read_strategy.h
app/src/main/cpp/utils/: is_ptr.h  jni_caller.cpp  jni_caller.h  log.h  runnable.h  thread.cpp  thread.h  time.h  types.h
app/src/main/java/com/wind/ndk/audio/player/: AudioPlayer.kt  AudioTrackPlayer.kt  AudioViewModel.kt  IAudioPlayer.kt  MainActivity.kt  OpenSLESPlayer.kt
app/src/main/java/com/wind/ndk/audio/player/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/wind/ndk/audio/player/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
